--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "dependencies": {
-        "discord.js": "^14.7.1"
+        "discord.js": "^14.7.1",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
-        "@types/node": "^18.14.2",
+        "@types/mysql": "^2.15.21",
+        "@types/node": "^18.14.6",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     },
